--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,17 @@
-New code
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My First HTML Page</title>
+</head>
+<body>
+  <h1>Hello, World! 🌍</h1>
+  <p>This is my first HTML page.</p>
+
+  <!-- A link -->
+  <a href="https://www.google.com" target="_blank">Go to Google</a>
+
+  <!-- A button -->
+  <button onclick="alert('You clicked the button!')">Click Me</button>
+</body>
+</html>
+
