--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
   <!-- A link -->
   <a href="https://www.google.com" target="_blank">Go to Google</a>
 
-  <!-- A button -->
+  <!-- A button in th space -->
   <button onclick="alert('You clicked the button!')">Click Me</button>
 </body>
 </html>
