--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
   <title>My First HTML Page </title>
 </head>
 <body>
-  <h1>Hello, World! I am Ullas gp 🌍</h1>
+  <h1>Hello, World! I am Ullas 🌍</h1>
   <p>This is my first HTML page.</p>
 
   <!-- A link -->
